open file with file chooser

--- a/src/meson.build
+++ b/src/meson.build
@@ -17,10 +17,4 @@ configure_file(
   install_dir: get_option('bindir')
 )
 
-play_sources = [
-  '__init__.py',
-  'main.py',
-  'window.py',
-]
-
-install_data(play_sources, install_dir: moduledir)
+install_subdir('.', install_dir: moduledir)
